// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
<div>
  <section>
    <span
      class="sc-braxZu sc-fQpRED kmIINU lfBFdz"
    >
      a
    </span>
    <span
      class="sc-braxZu kmIINU"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
<div>
  <section>
    <span
      class="sc-braxZu sc-gJhJTp kmIINU eGyMRX"
    >
      a
    </span>
    <span
      class="sc-braxZu sc-elDIKY kmIINU hwScxA"
    >
      b
    </span>
  </section>
</div>
`;
